<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/fab_margin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:id="@+id/imagen"
            android:layout_marginBottom= "10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombre"
            android:hint="@string/nombre_producto"
            android:layout_marginBottom= "10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descripcion"
            android:hint="@string/decripcion"
            android:layout_marginBottom= "10dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnpublicar"
            android:background="@drawable/buton_login"
            android:text="@string/publicar"
            android:layout_marginBottom= "10dp"/>

    </LinearLayout>

</ScrollView>